# DirtyCred

./: README.md
defense/: config  vmalloc_isolation.patch
kernel-analyzer/: Makefile  Makefile.inc  README.md
kernel-analyzer/src/: CMakeLists.txt
kernel-analyzer/src/lib/: .gitignore  Annotation.cc  Annotation.h  CMakeLists.txt  CallGraph.cc  CallGraph.h  Common.h  CredAnalyzer.cc  CredAnalyzer.h  GlobalCtx.h  KAMain.cc  StructAnalyzer.cc  StructAnalyzer.h
kernel-analyzer/test/: README.md  proc.c.ll  process.c.ll  scsi_ioctl.c.ll  user_defined.c.ll
